--- a/app/employeeadministration/webapp/i18n/i18n.properties
+++ b/app/employeeadministration/webapp/i18n/i18n.properties
@@ -13,3 +13,6 @@ employeeadministration-manage.flpTitle=Employee Administration
 
 #XCOL: Custom action text
 markInactive=Mark Inactive
+
+ConfirmDeleteTitle=Confirm Deletion
+ConfirmDeleteMessage=Are you sure you want to permanently delete this employee?
