Some logic added in employee function

--- a/app/fiorilaunchpad/webapp/i18n/i18n.properties
+++ b/app/fiorilaunchpad/webapp/i18n/i18n.properties
@@ -3,9 +3,9 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Case Study
+appTitle=Employee Case Study by Pranjal
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
-title=Case Study
+title=Case Study by Pranjal
